First version of 2048

--- a/index.html
+++ b/index.html
@@ -1,8 +1,88 @@
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
-<marquee>Yo!!</marquee>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Rye and Biscuit Playground</title>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/6571cc5696.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+
+    <link rel="stylesheet" href="res/css/2048/2048.css">
+
+</head>
+<body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">
+                    <!-- <img src="res/images/alex_cat.jpg"/> -->
+                    Brand
+                </a>
+            </div>
+    
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                   
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">2048</a>
+                            </li>
+                            <li>
+                                <a href="#">Catsweeper</a>
+                            </li>
+                            <li>
+                                <a href="#">Cats</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>   
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <!-- <div class="container">
+        <div class="jumbotron">
+            <h1>Biscuit & Rye's Playground</h1>
+        </div>
+    </div> -->
+    <div id="game-content"></div>
+
+    <script type="text/javascript" src="res/ts.js/board/board.js"></script>
+    <script type="text/javascript" src="res/ts.js/board/boardSquare.js"></script>
+    <script type="text/javascript" src="res/ts.js/board/direction.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/gameUtils.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/moveUtils.js"></script>    
+    <script type="text/javascript" src="res/ts.js/2048/blockSquare.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/gameInfo.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/moveInfo.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/gameBoard.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/gameBoardUtils.js"></script>
+    <script type="text/javascript" src="res/ts.js/2048/gameBoardUI.js"></script>
+
+    <script>
+        $(function(){
+            new GameBoardUI($('#game-content'));
+        })
+    </script>
+</body>
+</html>
