--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rye and Biscuit Playground</title>
+    <title>Biscuit and Rye Playground</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
@@ -13,8 +13,9 @@
     <script src="https://use.fontawesome.com/6571cc5696.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pangolin|Indie+Flower|Quattrocento+Sans|Sacramento|" rel="stylesheet"> 
+
+
     <link rel="stylesheet" href="res/css/playground/playground.css">
     <link rel="stylesheet" href="res/css/2048/2048.css">
     <link rel="stylesheet" href="res/css/catsweeper/catsweeper.css">
@@ -33,8 +34,10 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <!-- <img src="res/images/alex_cat.jpg"/> -->
+                    <span>
+                    <img style='width:30px;height:30px' src="res/images/cats_bed.jpg"/>
                     B & R
+                    </span>
                 </a>
             </div>
     
@@ -96,7 +99,7 @@
                 $('<img />').attr('src', this).appendTo('body').css('display', 'none');
             });
             // default game
-            new MineFieldUI($('#game-content'));
+            new Game2048BoardUI($('#game-content'));
         })
         function chooseGame (gameId) {
             var $gameContent = $('#game-content');
